syntax = "proto3";

message PriceUpdates {
  repeated double data = 1 [packed=true];  // 7 values per stock: [headerDataIndex, last, change, changePercentage, high, low, volume]
}

message HeaderData {
  repeated string symbols = 1;
  repeated string names = 2;
}
